# ChangeLog for net-im/wengophone
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/wengophone/ChangeLog,v 1.9 2006/07/19 11:36:12 genstef Exp $

*wengophone-2.0_pre20060719 (19 Jul 2006)

  19 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
  +files/ffmpeg-system.scons, -wengophone-2.0_pre20060524.ebuild,
  +wengophone-2.0_pre20060719.ebuild, wengophone-2.0_pre20099999.ebuild:
  New svn snapshot, update live ebuild to use system ffmpeg

  19 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
  wengophone-2.0_pre20099999.ebuild:
  update liveCVS ebuild to work with gcc-4.1

  01 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
  wengophone-1.0_pre20060408.ebuild:
  Add ffmpeg depend thanks to lothalev@gmail.com in bug 129389

*wengophone-2.0_pre20060524 (24 May 2006)

  24 May 2006; Stefan Schweizer <genstef@gentoo.org>
  +wengophone-2.0_pre20060524.ebuild, wengophone-2.0_pre20099999.ebuild:
  2.0 Snapshot ebuild, bug 133837

*wengophone-2.0_pre20099999 (23 May 2006)

  23 May 2006; Stefan Schweizer <genstef@gentoo.org>
  +wengophone-2.0_pre20099999.ebuild:
  Add cvs ebuild for wengophone-2.0, bug 133837

*wengophone-1.0_pre20060408 (08 Apr 2006)

  08 Apr 2006; Stefan Schweizer <genstef@gentoo.org> +files/debian.patch,
  -wengophone-1.0_pre20060106.ebuild, +wengophone-1.0_pre20060408.ebuild:
  version bump, use debian patch to make it compile with gcc-4.1

  20 Jan 2006; Stefan Schweizer <genstef@gentoo.org>
  wengophone-1.0_pre20060106.ebuild:
  Add oss support thanks to Rohan McGovern <rohan.pm@gmail.com> and Peter Read
  <drwook@users.sourceforge.net> in bug 119680

  13 Jan 2006; Stefan Schweizer <genstef@gentoo.org>
  wengophone-1.0_pre20060106.ebuild:
  Add eutils to inherit thanks to Colin Macdonald <cbm@sfu.ca> in bug 118830

*wengophone-1.0_pre20060106 (10 Jan 2006)

  10 Jan 2006; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +wengophone-1.0_pre20060106.ebuild: