@@ -1,0 +1,6 @@
+MD5 ebde115897c1315ceae57ce6965aa6ac wengophone_2.0.0~rc2-svn7135-1.diff.gz 9853
+RMD160 4e7c44be64a21c931170aebb5a0f2599102ce272 wengophone_2.0.0~rc2-svn7135-1.diff.gz 9853
+SHA256 168ca17abb20f5714bad316ed2c8f8c38aed271273d318b5b3ff47cfd74636e6 wengophone_2.0.0~rc2-svn7135-1.diff.gz 9853
+MD5 fa37ff70fd40d14f77c0a8735b91a489 wengophone_2.0.0~rc2-svn7135.orig.tar.gz 17303205
+RMD160 76e0b82eee3e8f61621b6429fd4fabdab61bc733 wengophone_2.0.0~rc2-svn7135.orig.tar.gz 17303205
+SHA256 aa4cd67dc114b15b293177e2e22007900dea8f6997d84164571e123a2570fcdb wengophone_2.0.0~rc2-svn7135.orig.tar.gz 17303205
