@@ -1,6 +1,14 @@
 # ChangeLog for net-im/wengophone
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/wengophone/ChangeLog,v 1.9 2006/07/19 11:36:12 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/wengophone/ChangeLog,v 1.10 2006/08/13 18:14:43 genstef Exp $
+
+*wengophone-2.0_rc2 (13 Aug 2006)
+
+  13 Aug 2006; Stefan Schweizer <genstef@gentoo.org>
+  -files/ffmpeg-system.scons, -wengophone-2.0_pre20060719.ebuild,
+  -wengophone-2.0_pre20099999.ebuild, +wengophone-2.0_rc2.ebuild:
+  New ebuild with patches from debian which are again based on the rpm patches
+  by GlaDiaC, remove old ebuilds and live ebuild
 
 *wengophone-2.0_pre20060719 (19 Jul 2006)
 
